--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,15 @@
         @apply flex items-center justify-end ;
     }
 }
+
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  
+  .line-clamp-none {
+    display: block;
+  }
+  
